# Autodesk-Fusion-360-MCP-Server

./: .gitignore  .mcp.json  .pre-commit-config.yaml  Fusion360MCPSetup.iss  Install_Addin.py  LICENSE  README.md  improvement.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-installer.yml  ci.yml  codeql.yml  release.yml
MCP/: .env  MCP.py  MCP_old.py  config.py  conftest.py  pytest.ini  requirements-test.txt
MCP/commands/: __init__.py
MCP/commands/commandDialog/: entry.py
MCP/commands/paletteSend/: entry.py
MCP/commands/paletteShow/: entry.py
MCP/lib/: __init__.py  registry.py
MCP/lib/features/: __init__.py  extrusion.py  operations.py  patterns.py  transform.py
MCP/lib/fusionAddInUtils/: __init__.py  event_utils.py  general_utils.py
MCP/lib/geometry/: __init__.py  primitives.py  sketches.py
MCP/lib/server/: __init__.py  http_server.py  routes.py  sse.py  standalone.py  task_dispatcher.py
MCP/lib/tests/: __init__.py  conftest.py  test_extrusion.py  test_operations.py  test_patterns.py  test_primitives.py  test_sketches.py  test_transform.py  test_utils.py
MCP/lib/tests/commands_tests/: __init__.py  conftest.py  test_command_dialog.py  test_commands_init.py  test_palette_send.py  test_palette_show.py
MCP/lib/utils/: __init__.py  export.py  measurement.py  parametric.py  selection.py  state.py
Projects/Camera-Trigger/: baffle_optimization.py
Server/: .coverage  MCP_Server.py  config.py  requirements.txt
Server-TS/: .mcpbignore  README.md  manifest.json  package-lock.json  package.json
Server-TS/scripts/: build-mcpb.ts
Server-TS/src/: config.ts  index.ts  instructions.ts  prompts.ts  sse-client.ts  telemetry.ts
Server-TS/src/tools/: base.ts  index.ts  inspection.ts  measurement.ts  parameters.ts  parametric.ts  scripting.ts  testing.ts  validation.ts
Server-TS/tests/: config.test.ts  inspection.test.ts  instructions.test.ts  measurement.test.ts  parameters.test.ts  parametric.test.ts  prompts.test.ts  scripting.test.ts  sse-client.test.ts  telemetry.test.ts  testing.test.ts  tool-registration.test.ts  validation.test.ts
Server/src/: __init__.py  client.py  config.py  instructions.py  prompts.py  sse_client.py  telemetry.py
Server/src/tools/: __init__.py  base.py  export.py  geometry.py  inspection.py  measurement.py  parameters.py  parametric.py  patterns.py  scripting.py  telemetry_tools.py  testing.py  validation.py
Server/tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_e2e.py  test_e2e_sse.py  test_export.py  test_geometry.py  test_inspection.py  test_instructions.py  test_measurement.py  test_parameters.py  test_parametric.py  test_patterns.py  test_prompts.py  test_scripting.py  test_telemetry.py  test_testing.py  test_tool_registration.py  test_validation.py
docs/: E2E_TESTING.md
scripts/: build-installer.ps1  generate-icon.ps1  generate_server_stubs.py  uninstall-addin.ps1  validate_tools.py
shared/: __init__.py  tool_categorization.py  tool_definitions.py
